--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Filmoteka</title>
+    <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header-main.html"></include>
+    <!-- <include src="./partials/slider.html"></include> -->
+    <include src="./partials/films-home.html"></include>
+    <!-- <include src="./partials/card.html"></include> -->
+    <include src="./partials/pagination.html"></include>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/up-btn.html"></include>
+  
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
