--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header-main.html"></include>
+    <include src="./partials/registration-modal.html"></include>
+
     <!-- <include src="./partials/slider.html"></include> -->
     <include src="./partials/films-home.html"></include>
     <!-- <include src="./partials/card.html"></include> -->
