--- a/src/library.html
+++ b/src/library.html
@@ -16,6 +16,7 @@
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/up-btn.html"></include>
+    <include src="./partials/registration-modal.html"></include>
     <script type="module" src="./library.js"></script>
   </body>
 </html>
