--- a/src/library.html
+++ b/src/library.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmoteka-library</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <include src="./partials/header-library.html"></include>
-    <include src="./partials/films-library.html"></include>
-    <include src="./partials/pagination.html"></include>
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/up-btn.html"></include>
-    <include src="./partials/registration-modal.html"></include>
-    <script type="module" src="./library.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Filmoteka-library</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <include src="./partials/header-library.html"></include>
+  <include src="./partials/films-library.html"></include>
+  <include src="./partials/pagination.html"></include>
+  <include src="./partials/footer.html"></include>
+  <include src="./partials/up-btn.html"></include>
+  <include src="./partials/registration-modal.html"></include>
+  <script type="module" src="./library.js"></script>
+</body>
+
 </html>
