--- a/src/library.html
+++ b/src/library.html
@@ -12,6 +12,7 @@
 <body>
   <include src="./partials/header-library.html"></include>
   <include src="./partials/films-library.html"></include>
+  <include src="./partials/spinner.html"></include>
   <include src="./partials/pagination.html"></include>
   <include src="./partials/footer.html"></include>
   <include src="./partials/up-btn.html"></include>
