--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     <!-- <include src="./partials/slider.html"></include> -->
     <include src="./partials/films-home.html"></include>
-    <include src="./partials/card.html"></include>
+    <!-- <include src="./partials/card.html"></include> -->
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/up-btn.html"></include>
