--- a/src/library.html
+++ b/src/library.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Filmoteka-library</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="stylesheet" href="./sass/main.scss" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 </head>
 
