--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   <include src="./partials/card.html"></include>
   <include src="./partials/pagination.html"></include>
   <include src="./partials/footer.html"></include>
+  <include src="./partials/footer-modal.html"></include>
   <include src="./partials/up-btn.html"></include>
 
   <script type="module" src="./index.js"></script>
