--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <title>Filmoteka</title>
   <link rel="stylesheet" href="./sass/main.scss" />
-  <script type="module" src="./index.js"></script>
+  <!-- <script type="module" src="./index.js"></script> -->
 </head>
 
 <body>
