--- a/src/library.html
+++ b/src/library.html
@@ -19,7 +19,7 @@
   <include src="./partials/footer-modal.html"></include>
   <include src="./partials/up-btn.html"></include>
   <include src="./partials/registration-modal.html"></include>
-  <script type="module" src="./library.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
